Update copy: Comparison, Testimonials, FAQ, Footer

--- a/index.html
+++ b/index.html
@@ -387,14 +387,66 @@
 
         <!-- Row 4 -->
         <div class="table-row">
-          <div class="col-feature">Segurança e Ética</div>
+          <div class="col-feature">Audiências e Multimídia</div>
           <div class="col-good">
             <i class="ph ph-check-circle icon-check"></i>
-            <span>Grounding (Baseado nos Autos)</span>
+            <span>Análise Multimodal (Áudio/Vídeo)</span>
           </div>
           <div class="col-bad">
             <i class="ph ph-x-circle icon-cross"></i>
-            <span>Risco de Alucinação / Erro</span>
+            <span>Trabalho Manual</span>
+          </div>
+        </div>
+
+        <!-- Row 5 -->
+        <div class="table-row">
+          <div class="col-feature">Segurança e Ética</div>
+          <div class="col-good">
+            <i class="ph ph-check-circle icon-check"></i>
+            <span>Técnica de Grounding (Baseado nos Autos)</span>
+          </div>
+          <div class="col-bad">
+            <i class="ph ph-x-circle icon-cross"></i>
+            <span>Risco de Inventar Leis/Fatos</span>
+          </div>
+        </div>
+
+        <!-- Row 6 -->
+        <div class="table-row">
+          <div class="col-feature">Pesquisa Jurídica</div>
+          <div class="col-good">
+            <i class="ph ph-check-circle icon-check"></i>
+            <span>Jurimetria Pessoal Instantânea</span>
+          </div>
+          <div class="col-bad">
+            <i class="ph ph-x-circle icon-cross"></i>
+            <span>Pesquisa Lenta e Manual</span>
+          </div>
+        </div>
+
+        <!-- Row 7 -->
+        <div class="table-row">
+          <div class="col-feature">Produtividade Real</div>
+          <div class="col-good">
+            <i class="ph ph-check-circle icon-check"></i>
+            <span>Atuação Estratégica (Foco na Tese)</span>
+          </div>
+          <div class="col-bad">
+            <i class="ph ph-x-circle icon-cross"></i>
+            <span>Enxugar Gelo (Tarefas Operacionais)</span>
+          </div>
+        </div>
+
+        <!-- Row 8 -->
+        <div class="table-row">
+          <div class="col-feature">Inovação e Carreira</div>
+          <div class="col-good">
+            <i class="ph ph-check-circle icon-check"></i>
+            <span>Autoridade Tech (Profissional de Vanguarda)</span>
+          </div>
+          <div class="col-bad">
+            <i class="ph ph-x-circle icon-cross"></i>
+            <span>Obsoletismo (Perde Competitividade)</span>
           </div>
         </div>
       </div>
@@ -462,7 +514,11 @@
           </div>
           <div class="program-item">
             <span class="program-number">06</span>
-            <span class="program-text">Curadoria Humana e Revisão</span>
+            <span class="program-text">Curadoria Humana e revisão obrigatória</span>
+          </div>
+          <div class="program-item">
+            <span class="program-number">07</span>
+            <span class="program-text">Casos práticos reais</span>
           </div>
         </div>
       </div>
@@ -543,7 +599,24 @@
     </div>
   </section>
 
-  <!-- SECTION 11: DEPOIMENTOS & FAQ -->
+  <!-- SECTION 11: DEPOIMENTOS -->
+  <section class="section" id="depoimentos">
+    <div class="container">
+      <div class="section-header center-header" data-aos="fade-up">
+        <h2 class="section-title">O que dizem nossos <span class="neon-gradient-text">Alunos</span></h2>
+      </div>
+
+      <!-- Placeholder para Depoimentos conforme copy -->
+      <div class="testimonials-placeholder" data-aos="zoom-in">
+        <div class="glass-card testimonial-placeholder-card">
+          <div class="placeholder-icon"><i class="ph ph-quotes"></i></div>
+          <p>Espaço reservado para imagens dos depoimentos dos alunos.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- SECTION 12: FAQ -->
   <section class="section" id="faq">
     <div class="container">
 
@@ -591,6 +664,26 @@
               <p>Sim! Aplicação em gabinetes, cartórios, defensorias e MPs.</p>
             </div>
           </div>
+
+          <div class="accordion-item">
+            <div class="accordion-header">
+              <h3>Terei acesso à gravação?</h3>
+              <i class="ph ph-plus accordion-icon"></i>
+            </div>
+            <div class="accordion-content">
+              <p>Sim! Adquirida no checkout para revisar quando quiser.</p>
+            </div>
+          </div>
+
+          <div class="accordion-item">
+            <div class="accordion-header">
+              <h3>NotebookLM e Gemini são gratuitos?</h3>
+              <i class="ph ph-plus accordion-icon"></i>
+            </div>
+            <div class="accordion-content">
+              <p>Sim! Versões gratuitas são suficientes. Sem custos adicionais.</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -628,9 +721,19 @@
   </section>
 
   <!-- FOOTER -->
-  <footer class="footer">
+  <!-- FOOTER FINAL CTA -->
+  <footer class="footer-cta" id="footer-cta">
     <div class="container">
-      <p>&copy; 2024 Nome. Todos os direitos reservados.</p>
+      <div class="footer-content" data-aos="fade-up">
+        <h2 class="section-title">Vagas Limitadas: Garanta a Sua Agora Mesmo!</h2>
+        <p class="footer-desc">As vagas são estritamente limitadas. Não fique para trás no mercado jurídico. O futuro já
+          começou.</p>
+        <p class="footer-price-highlight">Invista em você por apenas R$47,00.</p>
+        <a href="#pricing" class="btn pulse-btn large-btn">CLIQUE NO BOTÃO ABAIXO E GARANTA SUA VAGA AGORA!</a>
+      </div>
+      <div class="footer-copyright">
+        <p>&copy; 2024 Workshop Ecossistema Google Jurídico. Todos os direitos reservados.</p>
+      </div>
     </div>
   </footer>
 
