Fix: Add missing copy text to Hero and Problem sections

--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
       </div>
       <h1 class="glow-text">
         Apenas 1 dia para você <span class="neon-gradient-text glitch" data-text="dominar o Ecossistema Google">dominar
-          o Ecossistema Google</span> na Análise Processual.
+          o Ecossistema Google</span> na Análise Processual, Automatização de Petições, Pareceres e Estudos Jurídicos.
       </h1>
       <p>
-        Integre o poder de análise de provas do NotebookLM com a capacidade de redação do Gemini. Uma metodologia segura
-        e validada para multiplicar sua eficiência com ética.
+        Integre o poder de análise de provas do NotebookLM com a capacidade de redação do Gemini. Uma metodologia
+        segura, validada por magistrados e premiada internacionalmente, para multiplicar a eficiência do seu escritório
+        com ética e precisão.
       </p>
       <div class="hero-cta-wrapper">
         <a href="#pricing" class="btn">Quero Adquirir Agora</a>
@@ -61,10 +62,12 @@
   <section class="section" data-aos="fade-up">
     <div class="container">
       <div class="section-header">
-        <h2 class="section-title">O Fim do <span class="text-gradient">trabalho braçal</span> no Direito.</h2>
+        <h2 class="section-title">O Fim do <span class="text-gradient">trabalho braçal</span> no Direito e inteligência
+          estratégica para todos os atores jurídicos.</h2>
         <p class="section-desc">
-          O volume processual explodiu, mas o seu tempo continua o mesmo. Nesta imersão, você dominará o Ecossistema
-          Google para delegar à IA a leitura exaustiva.
+          Não importa se você redige sentenças, petições ou pareceres. O volume processual explodiu, mas o seu tempo
+          continua o mesmo. Nesta imersão, você dominará o Ecossistema Google para delegar à IA a leitura exaustiva e a
+          formatação repetitiva.
         </p>
       </div>
 
