Complete copy alignment: All text from copy.md implemented

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </svg>
           </div>
           <h3>Para o Advogado</h3>
-          <p>Mais teses vencedoras em menos tempo. Foque na estratégia enquanto a IA estrutura a base.</p>
+          <p>Mais teses vencedoras em menos tempo.</p>
         </article>
 
         <!-- Card 2 -->
@@ -94,8 +94,8 @@
               </polygon>
             </svg>
           </div>
-          <h3>Para o Magistrado</h3>
-          <p>Celeridade no gabinete com segurança decisória. Análise de provas complexas em segundos.</p>
+          <h3>Para o Magistrado e Assessor</h3>
+          <p>Celeridade no gabinete com segurança decisória.</p>
         </article>
 
         <!-- Card 3 -->
@@ -109,8 +109,12 @@
             </svg>
           </div>
           <h3>Para o Servidor</h3>
-          <p>Eficiência na triagem e análise de dados. Reduza o passivo processual com tecnologia.</p>
+          <p>Eficiência na triagem e análise de dados.</p>
         </article>
+      </div>
+
+      <div class="section-cta" data-aos="fade-up">
+        <a href="#pricing" class="btn">Quero Adquirir Agora</a>
       </div>
     </div>
   </section>
@@ -170,8 +174,7 @@
               <i class="ph ph-shield-check"></i>
             </div>
             <h3>Segurança Técnica</h3>
-            <p><strong>Método Validado:</strong> Blindagem contra erros e alucinações. Garantia de que tudo está
-              fundamentado nos autos.</p>
+            <p><strong>Método Validado:</strong> Para blindar sua atuação contra erros e alucinações da IA.</p>
           </div>
         </div>
       </div>
@@ -203,7 +206,7 @@
             <i class="ph ph-file-search bento-icon"></i>
             <h3>Gestão Inteligente de Contratos</h3>
             <p>Identifique cláusulas críticas, obrigações e riscos automaticamente, otimizando revisões e prevenindo
-              problemas.</p>
+              problemas jurídicos futuros.</p>
           </div>
         </div>
 
@@ -211,9 +214,9 @@
         <div class="bento-item glass-card" data-aos="zoom-in" data-aos-delay="200">
           <div class="bento-content">
             <i class="ph ph-lightning bento-icon"></i>
-            <h3>Construção de Argumentos</h3>
-            <p>Desenvolva peças com sugestões fundamentadas em legislação e doutrina, extraídas diretamente dos seus
-              documentos.</p>
+            <h3>Construção de Argumentos Precisos</h3>
+            <p>Desenvolva peças jurídicas com sugestões fundamentadas em legislação, jurisprudência e doutrina,
+              diretamente extraídas dos seus documentos.</p>
           </div>
         </div>
 
@@ -221,9 +224,9 @@
         <div class="bento-item glass-card" data-aos="zoom-in" data-aos-delay="300">
           <div class="bento-content">
             <i class="ph ph-folders bento-icon"></i>
-            <h3>Organização Avançada</h3>
-            <p>Agrupe e acesse conteúdos por processos, temas ou clientes, facilitando consultas rápidas e
-              colaborativas.</p>
+            <h3>Organização Avançada de Dados</h3>
+            <p>Agrupe e acesse conteúdos jurídicos por processos, temas ou clientes, facilitando consultas rápidas e
+              colaborativas na equipe.</p>
           </div>
         </div>
       </div>
@@ -463,26 +466,26 @@
       <!-- Lado Esquerdo: Por Que Participar -->
       <div class="left-content" data-aos="fade-right">
         <h2 class="section-title">Porque participar do <span class="text-gradient">Workshop?</span></h2>
-        <p class="section-desc">O Ecossistema Google cria o fluxo de trabalho definitivo. Não ensinamos apenas
-          ferramentas; ensinamos uma nova metodologia.</p>
+        <p class="section-desc">O Ecossistema Google (NotebookLM + Gemini) cria o fluxo de trabalho jurídico definitivo.
+          Não ensinamos apenas ferramentas; ensinamos uma nova metodologia.</p>
 
-        <ul class="benefit-list">
-          <li>
-            <i class="ph ph-check-circle"></i>
-            <span>Dominar a Análise de Provas (NotebookLM)</span>
-          </li>
-          <li>
-            <i class="ph ph-check-circle"></i>
-            <span>Automatizar a Redação Jurídica (Gemini)</span>
-          </li>
-          <li>
-            <i class="ph ph-check-circle"></i>
-            <span>Eliminar o Trabalho Braçal</span>
-          </li>
-          <li>
-            <i class="ph ph-check-circle"></i>
-            <span>Garantir Segurança e Ética (Método Inovajur)</span>
-          </li>
+        <li>
+          <i class="ph ph-check-circle"></i>
+          <span>Dominar a Análise de Provas (NotebookLM): Audite contratos e sentenças em segundos.</span>
+        </li>
+        <li>
+          <i class="ph ph-check-circle"></i>
+          <span>Automatizar a Redação Jurídica (Gemini): Crie minutas de petições, pareceres ou decisões
+            complexas.</span>
+        </li>
+        <li>
+          <i class="ph ph-check-circle"></i>
+          <span>Eliminar o Trabalho Braçal: Deixe a tecnologia cuidar da triagem, resumo e formatação.</span>
+        </li>
+        <li>
+          <i class="ph ph-check-circle"></i>
+          <span>Garantir Segurança e Ética: Aprenda o método Inovajur para blindar seu trabalho.</span>
+        </li>
         </ul>
 
         <div class="spacing-top">
@@ -492,7 +495,7 @@
 
       <!-- Lado Direito: Conteúdo Programático -->
       <div class="right-content" data-aos="fade-left">
-        <h3 class="program-title">O que voce vai aprender?</h3>
+        <h3 class="program-title">O que você vai aprender dentro do Workshop?</h3>
 
         <div class="program-list">
           <div class="program-item">
@@ -509,7 +512,7 @@
           </div>
           <div class="program-item">
             <span class="program-number">04</span>
-            <span class="program-text">Redação de Alto Nível</span>
+            <span class="program-text">Redação de Alto Nível (minutas de sentenças/peças)</span>
           </div>
           <div class="program-item">
             <span class="program-number">05</span>
@@ -523,6 +526,10 @@
             <span class="program-number">07</span>
             <span class="program-text">Casos práticos reais</span>
           </div>
+        </div>
+
+        <div class="program-cta">
+          <a href="#pricing" class="btn">Quero Adquirir Agora</a>
         </div>
       </div>
 
@@ -572,7 +579,7 @@
         <div class="pricing-card glass-card">
           <div class="pricing-header">
             <span class="batch-badge">LOTE 0</span>
-            <h2>Oferta Exclusiva</h2>
+            <h2>Oferta Especial: Lote 0</h2>
             <div class="progress-container">
               <div class="progress-bar" style="width: 35%;"></div>
               <span class="progress-text">35% das vagas preenchidas</span>
@@ -595,7 +602,7 @@
             <div id="pricing-info-container"></div>
             <!-- Check-out link placeholder if needed or just use button link -->
             <a href="#contato" class="btn pulse-btn large-btn">QUERO ADQUIRIR AGORA</a>
-            <p class="garantia-text">Garantia de 7 dias incondicional</p>
+            <p class="garantia-text">Valor promocional válido apenas para esta edição.</p>
           </div>
         </div>
       </div>
